Fetching data and css for mobile

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -6,7 +6,7 @@ body {
   box-sizing: border-box;
 }
 body{
-  background-color: $darkGrayishBlue;
+  background-color: $darkBlue;
   height: 100vh;
 }
 .main{
