--- a/src/scss/abstracts/_fonts.scss
+++ b/src/scss/abstracts/_fonts.scss
@@ -1,3 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap');
 
-$manrope-normal: 'manrope', sans-serif;
+$manrope: 'manrope', sans-serif;
