--- a/src/scss/components/_advice.scss
+++ b/src/scss/components/_advice.scss
@@ -4,12 +4,12 @@
     top: 20vh;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
     background-color: $darkGrayishBlue;
     border-radius: 10px;
     font-family: $manrope;
     text-align: center;
-    padding: 30px 0 60px 0;
+    padding: 40px 0 60px 0;
     &__id{
         color: $neonGreen;
         text-transform: uppercase;
@@ -25,9 +25,10 @@
         font-size: $quote;
         font-weight: 800;
     }
-    &__divider{
-       & img{
-           width: 90%;
-       }
-    }
+}
+
+@media screen and (min-width:$desktop){
+    .advice{
+        width: 50%;
+    }    
 }
