--- a/src/style/style.css
+++ b/src/style/style.css
@@ -33,12 +33,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 20px;
+  gap: 25px;
   background-color: #323a49;
   border-radius: 10px;
   font-family: "manrope", sans-serif;
   text-align: center;
-  padding: 30px 0 60px 0;
+  padding: 40px 0 60px 0;
 }
 
 .advice__id {
@@ -59,8 +59,10 @@ body {
   font-weight: 800;
 }
 
-.advice__divider img {
-  width: 90%;
+@media screen and (min-width: 1024px) {
+  .advice {
+    width: 50%;
+  }
 }
 
 .advice__reroll-button {
